Added o_attachment_preview in LC and Expense Module

--- a/dev_expense_management/views/dev_expense_views.xml
+++ b/dev_expense_management/views/dev_expense_views.xml
@@ -2,7 +2,7 @@
 <!--
 Copyright (C) 2015 DevIntelle Consulting Service Pvt.Ltd (<http://www.devintellecs.com>).
 
-For Module Support : devintelle@gmail.com  or Skype : devintelle 
+For Module Support : devintelle@gmail.com  or Skype : devintelle
  -->
 <odoo>
     <!-- Expense Form View -->
@@ -99,6 +99,7 @@ For Module Support : devintelle@gmail.com  or Skype : devintelle
                         </page>
                     </notebook>
                 </sheet>
+                <div class="o_attachment_preview"/>
                  <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers" groups="base.group_user" />
                     <field name="activity_ids" widget="mail_activity" />
