--- a/fendahl_interface/views/fusion_sync_history.xml
+++ b/fendahl_interface/views/fusion_sync_history.xml
@@ -17,7 +17,7 @@
             <field name="name">Fusion Sync History Controller</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">fusion.sync.history</field>
-            <field name="view_mode">form</field>
+            <field name="view_mode">form,tree</field>
             <field name="view_id" ref="view_fusion_sync_history"/>
             <field name="help" type="html">
               <p class="o_view_nocontent_smiling_face">
