--- a/fendahl_interface/views/fusion_sync_history.xml
+++ b/fendahl_interface/views/fusion_sync_history.xml
@@ -96,6 +96,57 @@
             <field name="code">model.sync_all()</field>
         </record>
     </data>
-
+    <data noupdate="1">  <!-- noupdate="1" means it won't be updated automatically at module updates -->
+        <record id="cron_import_invoice" model="ir.cron">
+            <field name="name">Import Invoices</field>
+            <field name="active" eval="False"/>
+            <field name="user_id" ref="base.user_root"/>  <!-- Executes as Superuser -->
+            <field name="interval_number">1</field>
+            <field name="interval_type">hours</field>
+            <field name="numbercall">-1</field>  <!-- -1 for indefinite repetitions -->
+            <field name="doall" eval="False"/>  <!-- False means do not run all missed if server stops -->
+            <field name="model_id" ref="model_fusion_sync_history"/>
+            <field name="code">model.sync_invoices()</field>
+        </record>
+    </data>
+     <data noupdate="1">  <!-- noupdate="1" means it won't be updated automatically at module updates -->
+        <record id="cron_import_trade" model="ir.cron">
+            <field name="name">Import Trades</field>
+            <field name="active" eval="False"/>
+            <field name="user_id" ref="base.user_root"/>  <!-- Executes as Superuser -->
+            <field name="interval_number">1</field>
+            <field name="interval_type">hours</field>
+            <field name="numbercall">-1</field>  <!-- -1 for indefinite repetitions -->
+            <field name="doall" eval="False"/>  <!-- False means do not run all missed if server stops -->
+            <field name="model_id" ref="model_fusion_sync_history"/>
+            <field name="code">model.sync_trades()</field>
+        </record>
+    </data>
+     <data noupdate="1">  <!-- noupdate="1" means it won't be updated automatically at module updates -->
+        <record id="cron_import_transfers" model="ir.cron">
+            <field name="name">Import Transfers</field>
+            <field name="active" eval="False"/>
+            <field name="user_id" ref="base.user_root"/>  <!-- Executes as Superuser -->
+            <field name="interval_number">1</field>
+            <field name="interval_type">hours</field>
+            <field name="numbercall">-1</field>  <!-- -1 for indefinite repetitions -->
+            <field name="doall" eval="False"/>  <!-- False means do not run all missed if server stops -->
+            <field name="model_id" ref="model_fusion_sync_history"/>
+            <field name="code">model.sync_transfers()</field>
+        </record>
+    </data>
+    <data noupdate="1">  <!-- noupdate="1" means it won't be updated automatically at module updates -->
+        <record id="cron_import_cashflows" model="ir.cron">
+            <field name="name">Import cashflows</field>
+            <field name="active" eval="False"/>
+            <field name="user_id" ref="base.user_root"/>  <!-- Executes as Superuser -->
+            <field name="interval_number">1</field>
+            <field name="interval_type">hours</field>
+            <field name="numbercall">-1</field>  <!-- -1 for indefinite repetitions -->
+            <field name="doall" eval="False"/>  <!-- False means do not run all missed if server stops -->
+            <field name="model_id" ref="model_fusion_sync_history"/>
+            <field name="code">model.sync_cashflows()</field>
+        </record>
+    </data>
 
 </odoo>
