--- a/fendahl_interface/views/fusion_sync_history.xml
+++ b/fendahl_interface/views/fusion_sync_history.xml
@@ -145,7 +145,7 @@
             <field name="numbercall">-1</field>  <!-- -1 for indefinite repetitions -->
             <field name="doall" eval="False"/>  <!-- False means do not run all missed if server stops -->
             <field name="model_id" ref="model_fusion_sync_history"/>
-            <field name="code">model.sync_cashflows()</field>
+            <field name="code">model.sync_cashflow()</field>
         </record>
     </data>
 
