--- a/sh_warehouse_avg_costing/views/product_product_views.xml
+++ b/sh_warehouse_avg_costing/views/product_product_views.xml
@@ -60,4 +60,14 @@
             </field>
         </field>
     </record>
+
+     <record id="action_product_update_warehouse_cost" model="ir.actions.server">
+        <field name="name">Update warehouses cost</field>
+    <field name="model_id" ref="stock.model_product_template"/>
+    <field name="binding_model_id" ref="stock.model_product_template"/>
+    <field name="binding_view_types">list,form</field>
+    <field name="state">code</field>
+    <field name="code">records.update_wh_costing()</field>
+    </record>
+
 </odoo>
