updated stock_picking.py to automatic calculate valuation on button_validate method. -Little changes in controller views.

--- a/fendahl_interface/views/cashflow_controller.xml
+++ b/fendahl_interface/views/cashflow_controller.xml
@@ -17,6 +17,7 @@
                      <field name="extendedamount"/>
                      <field name="costtype"/>
                      <field name="quantitystatus"/>
+                     <field name="cashflowstatus"/>
                 </tree>
             </field>
          </record>
