Added GUI errors options for invoice_controller_bi.py

--- a/fendahl_interface/views/cashflow_controller.xml
+++ b/fendahl_interface/views/cashflow_controller.xml
@@ -18,6 +18,8 @@
                      <field name="costtype"/>
                      <field name="quantitystatus"/>
                      <field name="cashflowstatus"/>
+                     <field name="material"/>
+                     <field name="commodity"/>
                 </tree>
             </field>
          </record>
