added buysell field to cashflow_controller.xml

--- a/fendahl_interface/views/cashflow_controller.xml
+++ b/fendahl_interface/views/cashflow_controller.xml
@@ -20,6 +20,7 @@
                      <field name="cashflowstatus"/>
                      <field name="material"/>
                      <field name="commodity"/>
+                     <field name="buysell"/>
                 </tree>
             </field>
          </record>
