added functionality in stock_picking.py to update standard price on product.

--- a/fendahl_interface/views/cashflow_controller.xml
+++ b/fendahl_interface/views/cashflow_controller.xml
@@ -21,6 +21,7 @@
                      <field name="material"/>
                      <field name="commodity"/>
                      <field name="buysell"/>
+                     <field name="sectionno"/>
                 </tree>
             </field>
         </record>
@@ -69,6 +70,7 @@
                     <field name="cashflowstatus"/>
                     <field name="material"/>
                     <field name="commodity"/>
+                    <field name="sectionno"/>
                     <separator/>
                 </search>
             </field>
