--- a/fendahl_interface/views/purchase_order.xml
+++ b/fendahl_interface/views/purchase_order.xml
@@ -26,6 +26,14 @@
     <field name="state">code</field>
     <field name="code">records.fetch_from_controller()</field>
     </record>
+                 <record id="model_sale_order_line_refresh" model="ir.actions.server">
+    <field name="name">Fetch from controller</field>
+    <field name="model_id" ref="sale_stock.model_sale_order_line"/>
+    <field name="binding_model_id" ref="sale_stock.model_sale_order_line"/>
+    <field name="binding_view_types">list,form</field>
+    <field name="state">code</field>
+    <field name="code">records.fetch_from_controller()</field>
+    </record>
 <!--         <record id="model_fusion_sync_history_action_trigger_sync_nomination" model="ir.actions.server">-->
 <!--            <field name="name">ICancel PO</field>-->
 <!--            <field name="model_id" ref="model_purchase_order"/>-->
