fixed some syncing issues on trade and transfer controller.

--- a/fendahl_interface/views/trade_controller.xml
+++ b/fendahl_interface/views/trade_controller.xml
@@ -18,6 +18,7 @@
             <field name="model">trade.controller.bi</field>
             <field name="arch" type="xml">
                 <tree string="Estimate">
+                    <field name="buysell"/>
                     <field name="dealmasterid"/>
                     <field name="tradestatus"/>
                     <field name="tradedate"/>
