--- a/fendahl_interface/views/stockadjustments_controller.xml
+++ b/fendahl_interface/views/stockadjustments_controller.xml
@@ -8,32 +8,32 @@
             <field name="arch" type="xml">
                 <tree string="Estimate">
                     <field name="storage"/>
-                     <field name="material"/>
-                     <field name="internalcompany"/>
-                     <field name="builddrawqty"/>
-                     <field name="builddrawtype"/>
-                     <field name="transferprice"/>
-                     <field name="effectivedate"/>
-                     <field name="deliverystatus"/>
-                     <field name="status"/>
+                    <field name="material"/>
+                    <field name="internalcompany"/>
+                    <field name="builddrawqty"/>
+                    <field name="builddrawtype"/>
+                    <field name="transferprice"/>
+                    <field name="effectivedate"/>
+                    <field name="deliverystatus"/>
+                    <field name="status"/>
                 </tree>
             </field>
-         </record>
+        </record>
 
-            <record id="action_fusion_stockadjustments_controller" model="ir.actions.act_window">
+        <record id="action_fusion_stockadjustments_controller" model="ir.actions.act_window">
             <field name="name">Fusion Stock Adj. Controller</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">stockadjustments.controller.bi</field>
             <field name="view_mode">tree,form</field>
             <field name="view_id" ref="view_fusion_stockadjustments"/>
             <field name="help" type="html">
-              <p class="o_view_nocontent_smiling_face">
-                Fusion Stock Adj. Controller
-              </p>
+                <p class="o_view_nocontent_smiling_face">
+                    Fusion Stock Adj. Controller
+                </p>
             </field>
         </record>
 
-         <record id="model_fusion_trade_controller_create_stock_adjustment" model="ir.actions.server">
+        <record id="model_fusion_trade_controller_create_stock_adjustment" model="ir.actions.server">
             <field name="name">Create Stock Adjustment</field>
             <field name="model_id" ref="model_stockadjustments_controller_bi"/>
             <field name="binding_model_id" ref="model_stockadjustments_controller_bi"/>
@@ -43,59 +43,45 @@
                 action = records.create_transfer()
             </field>
         </record>
-<!--        <record id="model_account_move_line_create_invoice" model="ir.actions.server">-->
-<!--            <field name="name">Fetch from controller</field>-->
-<!--            <field name="model_id" ref="model_account_move_line"/>-->
-<!--            <field name="binding_model_id" ref="model_account_move_line"/>-->
-<!--            <field name="binding_view_types">tree,form</field>-->
-<!--            <field name="state">code</field>-->
-<!--            <field name="code">-->
-<!--                action = records.fetch_invoice_from_controller()-->
-<!--            </field>-->
-<!--        </record>-->
-<!--        <record id="view_invoice_controller_bi_search" model="ir.ui.view">-->
-<!--            <field name="name">invoice.controller.bi.filter.search</field>-->
-<!--            <field name="model">invoice.controller.bi</field>-->
-<!--            <field name="arch" type="xml">-->
-<!--                <search>-->
-<!--                    <filter string="KEMEXON LTD" name="filter_internalcompany_1"-->
-<!--                            domain="[('internalcompany', 'in', ['KEMEXON LTD'])]"/>-->
-<!--                    <filter string="KEMEXON BELGIUM SRL" name="filter_internalcompany_2"-->
-<!--                            domain="[('internalcompany', 'in', ['KEMEXON BELGIUM SRL'])]"/>-->
-<!--                    <filter string="KEMEXON SA" name="filter_internalcompany_3"-->
-<!--                            domain="[('internalcompany', 'in', ['KEMEXON SA'])]"/>-->
-<!--                    <filter string="Payable" name="filter_payablereceivable_1"-->
-<!--                            domain="[('payablereceivable', 'in', ['Payable'])]"/>-->
-<!--                    <filter string="Receivable" name="filter_payablereceivable_2"-->
-<!--                            domain="[('payablereceivable', 'in', ['Receivable'])]"/>-->
-<!--                    <filter string="Refined Products" name="filter_commodity_1"-->
-<!--                            domain="[('commodity', 'in', ['Refined Products'])]"/>-->
-<!--                    <filter string="Coal" name="filter_commodity_2"-->
-<!--                            domain="[('commodity', 'in', ['Coal'])]"/>-->
-<!--                    <filter string="Pellets" name="filter_commodity_3"-->
-<!--                            domain="[('commodity', 'in', ['Pellets'])]"/>-->
-<!--                    <filter string="Pellets Industrial" name="filter_commodity_4"-->
-<!--                            domain="[('commodity', 'in', ['Pellets Industrial'])]"/>-->
-<!--                    <field name="invoicenumber"/>-->
-<!--                    <field name="invoicestatus"/>-->
-<!--                    <field name="internalcompany"/>-->
-<!--                    <field name="counterparty"/>-->
-<!--                    <field name="payablereceivable"/>-->
-<!--                    <field name="material"/>-->
-<!--                    <field name="commodity"/>-->
-<!--                    <field name="amtcurrency"/>-->
-<!--                    <field name="invoiceamt"/>-->
-<!--                    <field name="invoicedate"/>-->
-<!--                    <field name="customsectionnumber"/>-->
-<!--                    <separator/>-->
-<!--                </search>-->
-<!--            </field>-->
-<!--        </record>-->
+        <!--        <record id="model_account_move_line_create_invoice" model="ir.actions.server">-->
+        <!--            <field name="name">Fetch from controller</field>-->
+        <!--            <field name="model_id" ref="model_account_move_line"/>-->
+        <!--            <field name="binding_model_id" ref="model_account_move_line"/>-->
+        <!--            <field name="binding_view_types">tree,form</field>-->
+        <!--            <field name="state">code</field>-->
+        <!--            <field name="code">-->
+        <!--                action = records.fetch_invoice_from_controller()-->
+        <!--            </field>-->
+        <!--        </record>-->
+        <record id="view_stockadjustments_controller_bi_search" model="ir.ui.view">
+            <field name="name">stockadjustments.controller.bi.filter.search</field>
+            <field name="model">stockadjustments.controller.bi</field>
+            <field name="arch" type="xml">
+                <search>
+                    <filter string="KEMEXON LTD" name="filter_internalcompany_1"
+                            domain="[('internalcompany', 'in', ['KEMEXON LTD'])]"/>
+                    <filter string="KEMEXON BELGIUM SRL" name="filter_internalcompany_2"
+                            domain="[('internalcompany', 'in', ['KEMEXON BELGIUM SRL'])]"/>
+                    <filter string="KEMEXON SA" name="filter_internalcompany_3"
+                            domain="[('internalcompany', 'in', ['KEMEXON SA'])]"/>
+                    <field name="storage"/>
+                    <field name="material"/>
+                    <field name="internalcompany"/>
+                    <field name="builddrawqty"/>
+                    <field name="builddrawtype"/>
+                    <field name="transferprice"/>
+                    <field name="effectivedate"/>
+                    <field name="deliverystatus"/>
+                    <field name="status"/>
+                    <separator/>
+                </search>
+            </field>
+        </record>
         <menuitem id="menu_fusion_StockAdjustment"
-              name="Fusion Stock Adjustment Controller"
-              action="action_fusion_stockadjustments_controller"
-              parent="account.menu_finance_receivables"
-              sequence="113"/>
+                  name="Fusion Stock Adjustment Controller"
+                  action="action_fusion_stockadjustments_controller"
+                  parent="account.menu_finance_receivables"
+                  sequence="113"/>
     </data>
 
 </odoo>
