--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -80,6 +80,21 @@
                 </xpath>
             </field>
         </record>
+        <!-- Inherit search view to add filters to account move-->
+        <record id="view_account_move_filter_inherit" model="ir.ui.view">
+            <field name="name">account.move.select.inherit</field>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="account.view_account_invoice_filter"/>
+            <field name="arch" type="xml">
+                <xpath expr="//filter[@name='cancel']" position="after">
+                    <filter string="Fusion Ref Set" name="fusion_reference_set"
+                            domain="[('fusion_reference', '!=', False)]"/>
+                </xpath>
+                <xpath expr="//field[@name='partner_id']" position="after">
+                    <field name="fusion_reference"/>
+                </xpath>
+            </field>
+        </record>
         <record id="model_account_move_action_bulk_draft" model="ir.actions.server">
             <field name="name">Unpost</field>
             <field name="model_id" ref="account.model_account_move"/>
