--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -103,6 +103,14 @@
             <field name="state">code</field>
             <field name="code">records.button_draft()</field>
         </record>
+          <record id="model_account_move_action_fix_decimal_accuracy" model="ir.actions.server">
+            <field name="name">Fix Decimal Accuracy</field>
+            <field name="model_id" ref="account.model_account_move"/>
+            <field name="binding_model_id" ref="account.model_account_move"/>
+            <field name="binding_view_types">list,form</field>
+            <field name="state">code</field>
+            <field name="code">records.fix_decimal_accuracy()</field>
+        </record>
         <!--        <record id="view_move_form_account_payment" model="ir.ui.view">-->
         <!--            <field name="name">account.payment.form</field>-->
         <!--            <field name="model">account.payment</field>-->
