--- a/fendahl_interface/views/stockadjustments_controller.xml
+++ b/fendahl_interface/views/stockadjustments_controller.xml
@@ -7,6 +7,7 @@
             <field name="model">stockadjustments.controller.bi</field>
             <field name="arch" type="xml">
                 <tree string="Estimate">
+                    <field name="effectivedate"/>
                     <field name="storage"/>
                     <field name="material"/>
                     <field name="internalcompany"/>
